--- a/WOTS/DefaultTableViewCell.xib
+++ b/WOTS/DefaultTableViewCell.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,17 +30,47 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9tc-8y-PL5">
+                        <rect key="frame" x="202" y="33.5" width="100" height="30"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="t9q-XB-ZaG">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6jn-MK-hXv">
+                                        <rect key="frame" x="0.0" y="0.0" width="33.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Learned" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jnF-jV-fh1">
+                                        <rect key="frame" x="37.5" y="0.0" width="62.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Wva-Iq-YKM">
+                                <rect key="frame" x="0.0" y="28.5" width="100" height="2.5"/>
+                                <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
+                            </progressView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="IZa-0T-fjV" secondAttribute="bottom" constant="10" id="2IC-aP-qfL"/>
+                    <constraint firstItem="9tc-8y-PL5" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="XPQ-iO-Hst"/>
                     <constraint firstItem="IZa-0T-fjV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="cdc-Hh-R7p"/>
                     <constraint firstItem="yUd-Pw-ua5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="m1o-A5-I0V"/>
                     <constraint firstItem="yUd-Pw-ua5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="nfa-O6-yZH"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="9tc-8y-PL5" secondAttribute="trailing" constant="10" id="oTA-nc-tEC"/>
                     <constraint firstItem="IZa-0T-fjV" firstAttribute="top" secondItem="yUd-Pw-ua5" secondAttribute="bottom" constant="8" id="tBE-Zx-7Yb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="englishWordLabel" destination="yUd-Pw-ua5" id="T7m-FJ-WyK"/>
+                <outlet property="progressLabel" destination="6jn-MK-hXv" id="qVW-3v-jD6"/>
+                <outlet property="progressView" destination="Wva-Iq-YKM" id="k9x-IK-BM1"/>
                 <outlet property="spanishWordLabel" destination="IZa-0T-fjV" id="2p3-ZP-nys"/>
             </connections>
             <point key="canvasLocation" x="56" y="80.5"/>
